@@ -2,6 +2,7 @@
 -----
 + Added the ability to sort wishlists by review scores, which will display the highest rated items first
 + Added some behind the scenes updates to OpenCritic reviews, should now display correctly on all pages
++ Added DRM warnings, price history information, and SteamDB links to bundle pages
 : Updated SteamRep section on profile pages to use updated API and safer code
 : Updated market code so that an items lowest price is shown on subsequent pages
 : Fixed a bug where Steam Card Exchange links would not display properly on store pages
